--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
             <img src="./assets/vorntec-logo.png" alt="VÖRNTEC Logo" class="cover-logo">
         </div>
         <p class="cover-subtitle">Somos el ChatGPT de las emisiones de metano en Oil & Gas</p>
-        <p style="font-size: 1.1rem; opacity: 0.85; margin-bottom: 2rem; font-weight: 500;">Prueba de Concepto: 12 meses para <strong>reducir emisiones fugitivas en un 20% en 2026</strong></p>
+        <p style="font-size: 1.1rem; opacity: 0.85; margin-bottom: 2rem; font-weight: 500;">Prueba de Concepto: 12 meses para <strong>reducir emisiones fugitivas en 2026</strong></p>
         <img src="./assets/TGN_ops.png" alt="TGN Operations" class="cover-image">
         <div style="font-family: 'JetBrains Mono', monospace; opacity: 0.5; margin-top: 1.5rem;">
             Noviembre 2025<span class="terminal-cursor"></span>
@@ -427,7 +427,7 @@
                     $9M-$16M
                 </div>
                 <div style="font-size: 1.2rem; opacity: 0.85; color: var(--light); font-weight: 500;">
-                    USD mediante reducción del 20% de emisiones fugitivas
+                    USD mediante reducción de emisiones fugitivas
                 </div>
             </div>
 
@@ -1009,7 +1009,7 @@
                 Meta Principal
             </div>
             <div style="font-size: 1.8rem; font-weight: 700; color: var(--light); margin-bottom: 1rem;">
-                Reducir emisiones fugitivas 20%
+                Reducir emisiones fugitivas
             </div>
             <div style="font-size: 1.1rem; opacity: 0.9; margin-bottom: 1.2rem;">
                 Mediante IA predictiva con 72h de anticipación + detección con drones
@@ -1165,8 +1165,8 @@
                 <div style="display: grid; grid-template-columns: repeat(2, 1fr); gap: 2rem;">
                     <div style="grid-column: 1 / -1; text-align: center; padding: 2rem; background: linear-gradient(135deg, rgba(0, 176, 80, 0.15) 0%, rgba(15, 76, 129, 0.15) 100%); border-radius: 12px; border: 2px solid var(--primary);">
                         <div style="font-size: 1.3rem; opacity: 0.8; margin-bottom: 0.8rem;">Meta Principal</div>
-                        <div style="font-size: 3rem; color: var(--primary); font-weight: 700; margin-bottom: 0.5rem;">20%</div>
-                        <div style="font-size: 1.2rem; opacity: 0.9;">Reducción de Emisiones Fugitivas</div>
+                        <div style="font-size: 3rem; color: var(--primary); font-weight: 700; margin-bottom: 0.5rem;">Reducción de Emisiones Fugitivas</div>
+                        <div style="font-size: 1.2rem; opacity: 0.9;"> </div>
                     </div>
 
                     <div style="text-align: center; padding: 2rem; background: rgba(0, 176, 80, 0.1); border-radius: 12px;">
